<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_orange"
    android:fillViewport="true"
    tools:context=".activity.auth.SignUpActivity">
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/imageView_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        style="@style/Widget.AppCompat.ActionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_back">

      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_u_shop_logo"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/imageView" />

      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/constraintLayout"
          android:layout_width="match_parent"
          android:layout_height="350dp"
          android:layout_marginStart="40dp"
          android:layout_marginTop="30dp"
          android:layout_marginEnd="40dp"
          android:background="@drawable/shape_sign_in_back"
          android:elevation="10dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:button="@drawable/selector_checkbox_sign_up"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/terms"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_edittext_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_name">

          <ImageView
              android:id="@+id/imageView6"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="10dp"
              android:src="@drawable/ic_telephone"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginEnd="10dp"
              app:hintEnabled="false"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toEndOf="@+id/imageView6"
              app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinputedittext_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_gray"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_gray"
                android:textSize="12sp" />
          </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_edittext_back"
            android:orientation="horizontal"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/editText"
            app:layout_constraintStart_toStartOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/editText">

          <ImageView
              android:id="@+id/imageView4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="10dp"
              android:src="@drawable/ic_padlock"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginEnd="10dp"
              app:hintEnabled="false"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toEndOf="@+id/imageView4"
              app:layout_constraintTop_toTopOf="parent"
              app:passwordToggleDrawable="@drawable/selector_toggole_btn"
              app:passwordToggleEnabled="true"
              app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinputedittext_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_gray"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_gray"
                android:textSize="12sp" />
          </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_edittext_back"
            android:orientation="horizontal"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/editText"
            app:layout_constraintStart_toStartOf="@+id/editText"
            app:layout_constraintTop_toTopOf="parent">

          <ImageView
              android:id="@+id/imageView5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="10dp"
              android:src="@drawable/ic_user"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/textInputLayout2"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginEnd="10dp"
              app:hintEnabled="false"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toEndOf="@+id/imageView5"
              app:layout_constraintTop_toTopOf="parent"

              app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinputedittext_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_gray"
                android:hint="@string/name"
                android:inputType="textWebEditText"
                android:paddingStart="10dp"
                android:paddingBottom="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_gray"
                android:textSize="12sp" />
          </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cardBackgroundColor="@color/color_orange"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/checkBox">

          <LinearLayout
              android:id="@+id/linearLayout_sign_up"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/ripple_cardview"
              android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="15sp" />
          </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button">

          <TextView
              android:id="@+id/textView2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/or"
              android:textColor="@color/color_gray"
              app:layout_constraintEnd_toEndOf="@+id/button"
              app:layout_constraintHorizontal_bias="0.35"
              app:layout_constraintStart_toStartOf="@+id/button"
              app:layout_constraintTop_toBottomOf="@+id/button" />

          <ImageView
              android:id="@+id/imageView_facebook"
              android:layout_width="30dp"
              android:layout_height="30dp"
              android:layout_marginStart="5dp"
              android:src="@drawable/ic_facebook"
              app:layout_constraintBottom_toBottomOf="@+id/textView2"
              app:layout_constraintStart_toEndOf="@+id/textView2"
              app:layout_constraintTop_toTopOf="@+id/textView2" />

          <ImageView
              android:id="@+id/imageView_google_plus"
              android:layout_width="30dp"
              android:layout_height="30dp"
              android:layout_marginStart="10dp"
              android:src="@drawable/ic_google_plus"
              app:layout_constraintBottom_toBottomOf="@+id/textView2"
              app:layout_constraintStart_toEndOf="@+id/imageView_facebook"
              app:layout_constraintTop_toTopOf="@+id/textView2" />
        </LinearLayout>
      </androidx.constraintlayout.widget.ConstraintLayout>

      <LinearLayout
          android:id="@+id/linearLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="30dp"
          android:gravity="center"
          android:orientation="horizontal"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
          app:layout_constraintStart_toStartOf="@+id/constraintLayout"
          app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
          app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView_have_not_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
            android:id="@+id/textView_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sign_in"
            android:textColor="@color/color_dark_orange"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView_have_not_account"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
      </LinearLayout>
    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>